syntax = "proto3";

package protobuf;

import "google/api/annotations.proto";

// Interface exported by the server.
service Passwordservice {

    // reads a user information
    rpc CrudPasswords(CrudRequest) returns (CrudResponse) {
        option (google.api.http) = {
            post : "/passwords",
        };
    }

}

/////////////////
// Data models //
/////////////////

// how data is stored in mongo
message UserInformation {
    User user = 1;
    Auth auth = 2;
    // repeated Login logins = 3;
    string passwords = 4;
}

// user information
message User {
    string first = 1;
    string last = 2;
    string email = 3;
}

// authentication info for server
message Auth {
    string dn = 1;
    string authPassword = 2;
    string accessToken = 3;
    bool locked = 4;
    int32 failedLogins = 5;
    repeated AuthQuestion authQuestions = 6;
    repeated string knownIps = 7;
}

// basic authentication questions for user
message AuthQuestion {
    string q = 1;
    string a = 2;
}

// login information fetched from IP stack
message Login {
    int64 timestamp = 1;
    string ip = 2;
    Location location = 3;
}

message Location {
    string ip = 1;
    string type = 2;
    string coutry_code = 3;
    string coutnry_name = 4;
    string region_code = 5;
    string region_name = 6;
    string city = 7;
    string zip = 8;
    float latitude = 9;
    float longitude = 10;
}


////////////////////////
// request / response //
////////////////////////

message CrudResponse {
    User user = 1;
    repeated Login logins = 2;
    string passwords = 3;
}

message CrudRequest {
    string challengeResponse = 1;
    string answerResponse = 2;
    string newPasswords = 3;
}